<resources>
    <string name="app_name">TestApplication</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="well_come_to_our_application">Well come to our application</string>
    <string name="note">Note</string>
    <string name="new_text_note">New note</string>
    <string name="add_new_note">Add new note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="email_address">Email Address</string>
    <string name="password">Passwrod</string>
    <string name="login">Login</string>
    <string name="forgot_passwrod">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="register_user">Register User</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>

    <string-array name="language">
        <item>Java</item>
        <item>C#</item>
        <item>Php</item>
        <item>Android </item>
        <item>Java Script</item>
        <item>Python</item>
    </string-array>
</resources>