<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_new_note"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/txt_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/linear_background"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="#94E098"
            android:hint="@string/title"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="#94E098"
            android:gravity="top"
            android:hint="@string/description"
            android:lines="10" />
    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_layer"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:text="@string/new_text_note"
        android:textAllCaps="false"
        android:textColor="@color/purple_500" />


</RelativeLayout>